--- a/frontend/src/app/users/sign-up/sign-up.component.html
+++ b/frontend/src/app/users/sign-up/sign-up.component.html
@@ -1,3 +1,2 @@
-<p>
-  sign-up works!
-</p>
+<input class="input" type="text" placeholder="Text input">
+<input class="input" type="text" placeholder="Text input">
