--- a/frontend/src/app/users/sign-up/sign-up.component.html
+++ b/frontend/src/app/users/sign-up/sign-up.component.html
@@ -1,2 +1,17 @@
-<input class="input" type="text" placeholder="Text input">
-<input class="input" type="text" placeholder="Text input">
+<form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+    <input class="input" type="text" placeholder="Email*"  formControlName="email">
+    <div *ngIf="signUpForm.controls['email'].dirty && signUpForm.controls['email'].errors" >
+        <div class="error" *ngIf="signUpForm.controls['email'].errors.required">
+            Email is required
+        </div>
+        <div class="error" *ngIf="signUpForm.controls['email'].errors.email">
+            Not a valid email
+        </div>
+    </div>
+    <input class="input" type="password" placeholder="Password*"  formControlName="password">
+    <input class="input" type="password" placeholder="Confirm Password*"  formControlName="confirmPassword">
+    <div class="error" *ngIf="signUpForm.controls['password'].dirty  && signUpForm.controls.confirmPassword.errors?.MatchPassword">Password not match</div>
+    <input class="input" type="text" placeholder="First Name"  formControlName="firstName">
+    <input class="input" type="text" placeholder="Last Name"  formControlName="lastName">
+    <button class="button" type="submit" [disabled]="!signUpForm.valid">Sign Up</button>
+</form>
