--- a/frontend/src/app/users/login/login.component.html
+++ b/frontend/src/app/users/login/login.component.html
@@ -1,4 +1,7 @@
-<p>
-  login works!
-</p>
+
+<form [formGroup]="loginForm" (ngSubmit)="login()">
+<input type="text" class="input" placeholder="username" formControlName="username">
+<input type="password" class="input"  placeholder="password" formControlName="password">
+<button type="submit" [disabled]=!loginForm.valid>Login</button>
+</form>
 <button routerLink="/users/signup">Signup</button>
