--- a/frontend/src/app/admin/tournament-editor/tournament-editor.component.html
+++ b/frontend/src/app/admin/tournament-editor/tournament-editor.component.html
@@ -1,3 +1,4 @@
-<p>
-  tournament-editor works!
-</p>
+
+<button (click)="save()">Save</button>
+<div>{{tournament$ | async | json}}</div>
+<app-league-editor *ngFor="let league of (tournament$ | async)?.leagues" [league]="league"></app-league-editor>
