--- a/frontend/src/app/admin/tournament-list/tournament-list.component.html
+++ b/frontend/src/app/admin/tournament-list/tournament-list.component.html
@@ -1,6 +1,10 @@
 <button routerLink="/admin/edit" routerLinkActive="router-link-active" >New</button>
 <h4>Tournaments</h4>
 
-<a *ngFor="let tournament of tournaments$ | async" routerLink="/admin/edit/{{tournament.id}}">
+<div *ngFor="let tournament of tournaments$ | async">
+  <a routerLink="/admin/edit/{{tournament.id}}">
   {{tournament.name}}
-</a>
+  </a>
+  <button (click)=delete(tournament)>delete</button>
+</div>
+
