--- a/frontend/src/app/admin/tournament-list/tournament-list.component.html
+++ b/frontend/src/app/admin/tournament-list/tournament-list.component.html
@@ -5,6 +5,6 @@
   <a routerLink="/admin/edit/{{tournament.id}}">
   {{tournament.name}}
   </a>
-  <button (click)=delete(tournament.id)>delete</button>
+  <button (click)=delete(tournament.id) mat-button color="primary" >delete</button>
 </div>
 
