--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,6 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body{
-  color: gray
+  color: gray;
+  background-color: rgba(238, 238, 238, 0.301);
 }
