--- a/frontend/src/app/admin/league-editor/league-editor.component.html
+++ b/frontend/src/app/admin/league-editor/league-editor.component.html
@@ -8,7 +8,7 @@
           Groups
         </mat-panel-title>
         <mat-panel-description>
-          <button mat-button mat-button color="primary" (click)="addGroup($event)">Add Group</button>
+          <button mat-button mat-button color="primary" (click)="addGroupHandler($event)">Add Group</button>
         </mat-panel-description>
       </mat-expansion-panel-header>
 
