--- a/frontend/src/app/admin/group-editor/group-editor.component.html
+++ b/frontend/src/app/admin/group-editor/group-editor.component.html
@@ -1,6 +1,7 @@
 <p>
   Group: <input type="text" id="{{group.id}}.group.name" [(ngModel)]="group.name" (ngModelChange)="groupNameChanged()">
   <button mat-button mat-button color="primary" (click)="addTeamHandler($event)">Add Team</button>
+  <button mat-button mat-button color="primary" (click)="addMatchHandler($event)">Add Match</button>
   <button mat-button mat-button color="warn" (click)="removeGroupHandler($event)">Remove Group</button>
 </p>
 <mat-table #table [dataSource]="group.teams">
@@ -57,4 +58,4 @@
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
-<app-match-editor *ngFor="let match of group.matches" [match]="match"></app-match-editor>
+<app-match-editor *ngFor="let match of group.matches" [match]="match" [teamsInGroup]="group.teams"></app-match-editor>
