--- a/frontend/src/app/users/sign-up/sign-up.component.html
+++ b/frontend/src/app/users/sign-up/sign-up.component.html
@@ -2,7 +2,7 @@
   <button class="delete" (click)="toggleError()" ></button>
   Something when wrong saving this user.
 </div>
-<form [formGroup]="signUpForm" (ngSubmit)="onSubmit(signUpForm)">
+<form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
     <input class="input" type="text" placeholder="Email*"  formControlName="email">
     <div *ngIf="signUpForm.controls['email'].dirty && signUpForm.controls['email'].errors" >
         <div class="error" *ngIf="signUpForm.controls['email'].errors.required">
