--- a/frontend/src/app/admin/match-editor/match-editor.component.html
+++ b/frontend/src/app/admin/match-editor/match-editor.component.html
@@ -1,14 +1,16 @@
 <div *ngIf="match">
   <span>{{match.matchNr}}</span>
-  <app-object-picker [options]="teamsInGroup" [fieldName]="'name'" [pickedOptionId]="match && match.homeTeam ? match.homeTeam.id : undefined" (optionPicked)="homeTeamOptionPickedHandler($event)"></app-object-picker>
+  <app-object-picker *ngIf="teamsInGroup" [options]="teamsInGroup" [fieldName]="'name'" [pickedOptionId]="match && match.homeTeam ? match.homeTeam.id : undefined" (optionPicked)="homeTeamOptionPickedHandler($event)"></app-object-picker>
+  <label for="{{match.id}}.homeTeamScore" *ngIf="teamsInGroup === undefined || teamsInGroup.length === 0">{{match.homeTeam ? match.homeTeam.name : ""}}</label>
   <input type="text" class="number-box" id="{{match.id}}.homeTeamScore" [(ngModel)]="match.homeTeamScore" (ngModelChange)="matchChanged()">
   -
   <input type="text"  class="number-box" id="{{match.id}}.outTeamScore" [(ngModel)]="match.outTeamScore" (ngModelChange)="matchChanged()">
-  <app-object-picker [options]="teamsInGroup" [fieldName]="'name'" [pickedOptionId]="match && match.outTeam ? match.outTeam.id : undefined" (optionPicked)="outTeamOptionPickedHandler($event)"></app-object-picker>
+  <app-object-picker  *ngIf="teamsInGroup" [options]="teamsInGroup" [fieldName]="'name'" [pickedOptionId]="match && match.outTeam ? match.outTeam.id : undefined" (optionPicked)="outTeamOptionPickedHandler($event)"></app-object-picker>
+  <label for="{{match.id}}.homeTeamScore" *ngIf="teamsInGroup === undefined || teamsInGroup.length === 0">{{match.outTeam ? match.outTeam.name : ""}}</label>
 
   <label>Terrain</label> <input class="number-box" id="{{match.id}}.terrain" type="number" [(ngModel)]="match.terrain" (ngModelChange)="matchChanged()">
   <label>hour</label> <input type="text" class="number-box" id="{{match.id}}.hour" [(ngModel)]="match.hour" (ngModelChange)="matchChanged()">
   <label>:</label> <input type="text" class="number-box" id="{{match.id}}.minutes" [(ngModel)]="match.minutes" (ngModelChange)="matchChanged()">
-  <app-object-picker [options]="allReferees$ | async" [fieldName]="'name'" [pickedOptionId]="match && match.referee ? match.referee.id : undefined" (optionPicked)="refereeOptionPickedHandler($event)"></app-object-picker>
+  <app-object-picker *ngIf="(allReferees$ | async) !== undefined" [options]="allReferees$ | async" [fieldName]="'name'" [pickedOptionId]="match && match.referee ? match.referee.id : undefined" (optionPicked)="refereeOptionPickedHandler($event)"></app-object-picker>
   <button mat-button mat-button color="warn" (click)="deleteMatch()" >Remove</button>
 </div>
