--- a/frontend/src/app/admin/group-editor/group-editor.component.html
+++ b/frontend/src/app/admin/group-editor/group-editor.component.html
@@ -58,4 +58,4 @@
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
-<app-match-editor *ngFor="let match of group.matches" [match]="match" [teamsInGroup]="group.teams"></app-match-editor>
+<app-match-editor *ngFor="let match of group.matches; trackBy: trackMatch" [match]="match" [possibleTeamsInMatch]="group.teams"></app-match-editor>
