--- a/frontend/src/app/admin/league-editor/league-editor.component.html
+++ b/frontend/src/app/admin/league-editor/league-editor.component.html
@@ -31,7 +31,7 @@
       </mat-expansion-panel-header>
       <mat-tab-group mat-align-tabs="end" >
           <mat-tab  *ngFor="let round of league.rounds; trackBy track" label="{{round.name}}">
-             <app-round-editor [round]="round"></app-round-editor>
+             <app-round-editor [round]="round" [teamsInRound]="teamsInLeague$ | async"></app-round-editor>
           </mat-tab>
         </mat-tab-group>
 
