--- a/frontend/src/app/admin/round-editor/round-editor.component.html
+++ b/frontend/src/app/admin/round-editor/round-editor.component.html
@@ -1,2 +1,2 @@
-<app-match-editor *ngFor="let match of round.matches" [match]="match"></app-match-editor>
+<app-match-editor *ngFor="let match of round.matches" [match]="match" [possibleTeamsInMatch]="teamsInRound"></app-match-editor>
 
