--- a/frontend/src/app/admin/match-editor/match-editor.component.html
+++ b/frontend/src/app/admin/match-editor/match-editor.component.html
@@ -1,17 +1,20 @@
 <div *ngIf="match">
-  <span>{{match.matchNr}}</span>
+    <span>{{match.matchNr}}</span>
   <app-object-picker *ngIf="possibleTeamsInMatch" [options]="possibleTeamsInMatch" [fieldName]="'name'" [pickedOptionId]="match && match.homeTeam ? match.homeTeam.id : undefined" (optionPicked)="homeTeamOptionPickedHandler($event)"></app-object-picker>
-  <label for="{{match.id}}.homeTeamScore" *ngIf="!possibleTeamsInMatch">{{match.homeTeam ? match.homeTeam.name : ""}}</label>
-  <input type="text" class="number-box" id="{{match.id}}.homeTeamScore" [(ngModel)]="match.homeTeamScore" (ngModelChange)="matchChanged()">
-  -
-  <input type="text"  class="number-box" id="{{match.id}}.outTeamScore" [(ngModel)]="match.outTeamScore" (ngModelChange)="matchChanged()">
-  <app-object-picker  *ngIf="possibleTeamsInMatch" [options]="possibleTeamsInMatch" [fieldName]="'name'" [pickedOptionId]="match && match.outTeam ? match.outTeam.id : undefined" (optionPicked)="outTeamOptionPickedHandler($event)"></app-object-picker>
-  <label for="{{match.id}}.homeTeamScore" *ngIf="!possibleTeamsInMatch">{{match.outTeam ? match.outTeam.name : ""}}</label>
+  <span *ngIf="!possibleTeamsInMatch">{{match.homeTeam ? match.homeTeam.name : ""}}</span>
 
-  <label>Terrain</label> <input class="number-box" id="{{match.id}}.terrain" type="number" [(ngModel)]="match.terrain" (ngModelChange)="matchChanged()">
-  <label>hour</label> <input type="text" class="number-box" id="{{match.id}}.hour" [(ngModel)]="match.hour" (ngModelChange)="matchChanged()">
-  <label>:</label> <input type="text" class="number-box" id="{{match.id}}.minutes" [(ngModel)]="match.minutes" (ngModelChange)="matchChanged()">
+  <input matInput type="text" class="number-box" id="{{match.id}}.homeTeamScore" [(ngModel)]="match.homeTeamScore" (ngModelChange)="matchChanged()">
+  <span>-</span>
+  <input matInput type="text"  class="number-box" id="{{match.id}}.outTeamScore" [(ngModel)]="match.outTeamScore" (ngModelChange)="matchChanged()">
+  <app-object-picker  *ngIf="possibleTeamsInMatch" [options]="possibleTeamsInMatch" [fieldName]="'name'" [pickedOptionId]="match && match.outTeam ? match.outTeam.id : undefined" (optionPicked)="outTeamOptionPickedHandler($event)"></app-object-picker>
+  <span  *ngIf="!possibleTeamsInMatch">{{match.outTeam ? match.outTeam.name : ""}}</span>
+
+  <span>Terrain</span> <input matInput class="number-box" id="{{match.id}}.terrain" type="number" [(ngModel)]="match.terrain" (ngModelChange)="matchChanged()">
+  <span>time</span> <input matInput type="text" class="number-box" id="{{match.id}}.hour" [(ngModel)]="match.hour" (ngModelChange)="matchChanged()">
+  <span>:</span> <input matInput type="text" class="number-box" id="{{match.id}}.minutes" [(ngModel)]="match.minutes" (ngModelChange)="matchChanged()">
   <app-object-picker *ngIf="(allReferees$ | async) !== undefined" [options]="allReferees$ | async" [fieldName]="'name'" [pickedOptionId]="match && match.referee ? match.referee.id : undefined" (optionPicked)="refereeOptionPickedHandler($event)"></app-object-picker>
-  <input type="text" id="{{match.id}}.comment" [(ngModel)]="match.comment" (ngModelChange)="matchChanged()">
+  <mat-form-field>
+    <input matInput type="text" id="{{match.id}}.comment" [(ngModel)]="match.comment" (ngModelChange)="matchChanged()">
+  </mat-form-field>
   <button mat-button mat-button color="warn" (click)="deleteMatch()" >Remove</button>
 </div>
