--- a/frontend/src/app/admin/match-editor/match-editor.component.scss
+++ b/frontend/src/app/admin/match-editor/match-editor.component.scss
@@ -20,6 +20,7 @@
     & > .number-box{
        width: 2em;
        border-bottom: 1px solid lightgrey;
+       margin-left: 2px;
     }
 
     span{
